# search-engine-bouteflika-

./: AVLTree.h  Answers.md  CMakeLists.txt  IndexHandler.cpp  IndexHandler.h  Query.cpp  Query.h  UI.cpp  UI.h  Utility.cpp  Utility.h  main.cpp  porter2_stemmer.h  stopwords.txt  test_AVLTree.cpp  test_Index.cpp  test_Query.cpp
